RESOLVED FIXED225478
Fix crash when WebsiteDataStore is destroyed with outstanding getNetworkProcessConnection request
https://bugs.webkit.org/show_bug.cgi?id=225478
Summary Fix crash when WebsiteDataStore is destroyed with outstanding getNetworkProce...
Alex Christensen
Reported 2021-05-06 13:13:36 PDT
Fix crash when WebsiteDataStore is destroyed with outstanding getNetworkProcessConnection request
Attachments
Patch (3.63 KB, patch)
2021-05-06 13:19 PDT, Alex Christensen
no flags
Patch (3.73 KB, patch)
2021-05-06 13:24 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2021-05-06 13:19:35 PDT
Alex Christensen
Comment 2 2021-05-06 13:19:38 PDT
Chris Dumez
Comment 3 2021-05-06 13:22:03 PDT
Comment on attachment 427926 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=427926&action=review r=me > Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:1725 > + RunLoop::main().dispatch([weakThis = WTFMove(weakThis), webProcessProxy = WTFMove(webProcessProxy), reply = WTFMove(reply)] () mutable { We may want to add a comment explaining we're retrying asynchronously because we may be in the middle of destruction.
Alex Christensen
Comment 4 2021-05-06 13:24:09 PDT
Alex Christensen
Comment 5 2021-05-06 13:41:04 PDT
Note You need to log in before you can comment on or make changes to this bug.