Cherry-pick r277114. rdar://problem/77623232

Fix crash when WebsiteDataStore is destroyed with outstanding getNetworkProcessConnection request
    https://bugs.webkit.org/show_bug.cgi?id=225478
    <rdar://77576148>

    Reviewed by Chris Dumez.

    In WebsiteDataStore::getNetworkProcessConnection if we don't get a connection the first time, we terminate the network process
    and try again.  This greatly increases our success rate.  However, if we are cancelling the reply because of the destruction
    of the WebsiteDataStore, we will end up doing bad things with partially destroyed objects, which ends up crashing.
    In order to prevent this, use RunLoop::main.dispatch to retry on the next runloop iteration so that we will never be inside the
    stack of WebsiteDataStore::~WebsiteDataStore when retrying.  In that case, we will find that weakThis is null and send an empty
    reply.

    * UIProcess/WebsiteData/WebsiteDataStore.cpp:
    (WebKit::WebsiteDataStore::getNetworkProcessConnection):

    Canonical link: https://commits.webkit.org/237412@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277114 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.482@safari-611.2.7.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611.2.7.0-branch@277121 268f45cc-cd09-0410-ab3c-d52691b4dbfc